PartB and Part A refactor

--- a/PartA/index.html
+++ b/PartA/index.html
@@ -15,8 +15,9 @@
             <h1>THE CAKE WORLD</h1>
         </div>
     </div>  
-    <p>Here at The Cake World baking is our passion! Every cake is delicious and freshly baked with high quality ingredients. We offer 20+ flavours with custom for every occasion. </p>
-    <a href="https://customcakeworld.com">Link to order custom cake </a>
+    <p>Here at The Cake World, baking is our passion! Every cake is delicious and freshly baked with high quality ingredients. <br/>
+        We offer 20+ flavours with custom for every occasion. </p>
+    <a href="https://customcakedesign.com" target="_blank" class="customLink">Click here to order custom cake </a>
     <div>
         <table>
             <thead>
